Estética Aprimorada: Refinando a Experiência Visual

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <p>Um gerador de citações românticas em JavaScript, usando tecnologias DOM e Fetch.</p>
                         <div class="info">
                             <a href="https://dev-paixao.github.io/GeradorRomantico/" target="_blank">
-                                <p class="btn-project">Live Demo</p>
+                                <p class="btn-project">Leia Mais</p>
                             </a>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                         <p>Simplifique o compartilhamento de URLs longas encurtador baseado em tecnologia de compactação.</p>
                         <div class="info">
                             <a href="https://dev-paixao.github.io/encurtador-url/" target="_blank">
-                                <p class="btn-project">Live Demo</p>
+                                <p class="btn-project">Leia Mais</p>
                             </a>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                         <p>Crie QR codes de forma rápida e intuitiva com o QRCreator, a aplicação utiliza o QRServer para a geração dos QR codes.</p>
                         <div class="info">
                             <a href="https://dev-paixao.github.io/gerador-qrcode/" target="_blank">
-                                <p class="btn-project">Live Demo</p>
+                                <p class="btn-project">Leia Mais</p>
                             </a>
                         </div>
                     </div>
@@ -194,7 +194,7 @@
                         <p>Recriação da interface da Amazon Prime Video com HTML e CSS</p>
                         <div class="info">
                             <a href="https://dev-paixao.github.io/prime-landingpage-template/" target="_blank">
-                                <p class="btn-project">Live Demo</p>
+                                <p class="btn-project">Leia Mais</p>
                             </a>
                         </div>
                     </div>
@@ -210,7 +210,7 @@
                         <p>Aplicação web em HTML, CSS e JavaScript que utiliza a API Weather API para informações meteorológicas.</p>
                         <div class="info">
                             <a href="https://dev-paixao.github.io/TempoCerto/" target="_blank">
-                                <p class="btn-project">Live Demo</p>
+                                <p class="btn-project">Leia Mais</p>
                             </a>
                         </div>
                     </div>
@@ -270,23 +270,26 @@
             
             <div class="link-boxes">
                 <div class="box">   
-                    <h4>quem eu sou</h4>
+                    <h4>MENU</h4>
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#skills">Minhas Skills</a></li>
-                        <li><a href="https://api.whatsapp.com/send?phone=5561995672321" target="_blank">Contacte-me</a></li>
+                        <li><a href="#cards-id">Portfólio</a></li>
+                        <li><a href="#contact-id">Contato</a></li>
+                    
                     </ul>
                 </div>
                 <div class="box">
-                    <h4>PORTFÓLIO</h4>
+                    <h4>REDES SOCIAIS</h4>
                     <ul>
-                        <li><a href="https://dev-paixao.github.io/encurtador-url/" target="_blank">Encurtador de URL</a></li>
-                        <li><a href="https://dev-paixao.github.io/gerador-qrcode/" target="_blank">Gerador de QRCode</a></li>
-                        <li><a href="https://dev-paixao.github.io/prime-landingpage-template/" target="_blank">Clone Amazon</a></li>
+                        <li><a href="https://www.instagram.com/dev_paixao/" target="_blank">Instagram</a></li>
+                        <li><a href="https://www.linkedin.com/in/dev-paixao/" target="_blank">LinkedIn</a></li>
+                        <li><a href="https://www.threads.net/@dev_paixao" target="_blank">threads</a></li>
                     </ul>
                 </div>
                 <div class="box">
-                    <h4>Entre em contato!</h4>
+                    <h4>Fale Comigo</h4>
+                    <p>Ainda tem alguma dúvida? Deixe seus dados nos campos abaixo, e em breve entrarei em contato com você.</p>
                     <div class="form-sub">
                         <form action="https://api.staticforms.xyz/submit" method="post">
                             <label>E-mail</label>
