Atualização: Melhoria na aparência do menu responsivo

--- a/index.html
+++ b/index.html
@@ -41,16 +41,14 @@
                     LinkedIn
                 </a>
             </nav>
-        </div>
-    
-        <div class="menu-responsive">
-            <img class="logo-responsive" src="assets/img/devpaixao-logo.png" alt="logo Encurtador">
-            <div class="menu-toggle">
-                <div class="one"></div>
-                <div class="two"></div>
-                <div class="three"></div>
+
+            <div class="menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </div>
         </div>
+
     </header>
     
     <main class="conteudo">
