Atualização: Estilização responsiva aprimorada para menus

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </h1>
             
             <nav class="header-menu">
-                <a class="header-menu-item" href="#home">HOME</a>
-                <a class="header-menu-item" href="#skills">SKILLS</a>
-                <a class="header-menu-item" href="#cards-id">PORTFÓLIO</a>
-                <a class="header-menu-item" href="#contact-id">CONTATO</a>
+                <a class="header-menu-item" href="#home">Home</a>
+                <a class="header-menu-item" href="#skills">Skills</a>
+                <a class="header-menu-item" href="#cards-id">Portfólio </a>
+                <a class="header-menu-item" href="#contact-id">Contato</a>
             </nav>
     
             <nav class="header-menu">
