--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <div class="contact-icons">
                         <a href="#"><i class="fa fa-envelope"></i></a>
                         <h3>E-mail</h3>
-                        <p>dev.paixao@gamil.com</p>
+                        <p>dev.paixao@gmail.com</p>
                     </div>
 
                     <div class="contact-icons">
